--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.13</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
