--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -79,6 +79,10 @@ spring:
         cache-duration: PT1S # 1 second, see the ISO 8601 standard
     thymeleaf:
         cache: false
+    servlet:
+        multipart:
+            max-file-size: 40MB
+            max-request-size: 40MB
 
 server:
     port: 8080
