--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -65,8 +65,8 @@ spring:
         default-encoding: UTF-8
         host: smtp.gmail.com
         port: 587
-        username: ghassanguessous1@gmail.com
-        password:
+        username: pfetaxe@gmail.com
+        password: taxeCommune
         properties:
             mail:
                 smtp:
