--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "node_modules"
     ],
     "dependencies": {
+        "@amcharts/amcharts4": "^4.4.7",
         "@angular/common": "7.2.4",
         "@angular/compiler": "7.2.4",
         "@angular/core": "7.2.4",
@@ -64,6 +65,7 @@
         "mini-css-extract-plugin": "0.5.0",
         "moment-locales-webpack-plugin": "1.0.7",
         "optimize-css-assets-webpack-plugin": "5.0.1",
+        "postcss-loader": "3.0.0",
         "prettier": "1.16.4",
         "reflect-metadata": "0.1.13",
         "rimraf": "2.6.3",
@@ -77,8 +79,6 @@
         "tslint-config-prettier": "1.18.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.2.4",
-        "postcss-loader": "3.0.0",
-        "xml2js": "0.4.19",
         "webpack": "4.29.3",
         "webpack-cli": "3.2.3",
         "webpack-dev-server": "3.1.14",
@@ -86,7 +86,8 @@
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
         "workbox-webpack-plugin": "3.6.3",
-        "write-file-webpack-plugin": "4.5.0"
+        "write-file-webpack-plugin": "4.5.0",
+        "xml2js": "0.4.19"
     },
     "engines": {
         "node": ">=8.9.0"
