add notification gab variation statistics

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         "@fortawesome/fontawesome-svg-core": "1.2.14",
         "@fortawesome/free-solid-svg-icons": "5.7.1",
         "@ng-bootstrap/ng-bootstrap": "4.0.2",
+        "@ngx-loading-bar/core": "^4.2.0",
+        "@ngx-loading-bar/http": "^4.2.0",
+        "@ngx-loading-bar/http-client": "^4.2.0",
+        "@ngx-loading-bar/router": "^4.2.0",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
         "bootstrap": "4.3.1",
@@ -79,7 +83,7 @@
         "tslint-config-prettier": "1.18.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.2.4",
-        "webpack": "4.29.3",
+        "webpack": "4.28.4",
         "webpack-cli": "3.2.3",
         "webpack-dev-server": "3.1.14",
         "webpack-merge": "4.2.1",
