--- a/pom.xml
+++ b/pom.xml
@@ -343,6 +343,11 @@
             <artifactId>unxml</artifactId>
             <version>0.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.6</version>
+        </dependency>
     </dependencies>
 
     <build>
